--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "env": {
     "SITE_URL": "https://dynamic.capital",
     "NEXT_PUBLIC_SITE_URL": "https://dynamic.capital",
-    "ALLOWED_ORIGINS": "https://dynamic.capital,https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app",
+    "ALLOWED_ORIGINS": "https://dynamic.capital,https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://ton.site,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app",
     "MINIAPP_ORIGIN": "https://dynamic.capital",
     "TELEGRAM_WEBHOOK_URL": "https://dynamic.capital/webhook"
   }
