--- a/dns/dynamic-capital.lovable.app.json
+++ b/dns/dynamic-capital.lovable.app.json
@@ -34,7 +34,7 @@
       "name": "ton-gateway",
       "data": "ton-gateway.dynamic-capital.ondigitalocean.app",
       "ttl": 300,
-      "note": "Gateway proxy fronting the DigitalOcean TON site origin"
+      "note": "Legacy CNAME pointing to the DigitalOcean-operated TON gateway (kept for redeploy workflows)."
     }
   ]
 }
