--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -68,6 +68,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.2",
     "@vercel/otel": "^2.0.1",
+    "@vercel/speed-insights": "^1.2.0",
     "@web3-onboard/bitget": "^2.1.1",
     "@web3-onboard/common": "^2.4.2",
     "@web3-onboard/core": "^2.24.1",
