--- a/.github/workflows/ci-deploy-dc.yml
+++ b/.github/workflows/ci-deploy-dc.yml
@@ -14,34 +14,28 @@ jobs:
   check:
     runs-on: ubuntu-latest
     outputs:
-      deno_cache_hit: ${{ steps.deno-cache-telemetry.outputs.cache_hit }}
+      deno_cache_hit: ${{ steps.setup-deno.outputs.deno-cache-hit }}
     env:
       DENO_TLS_CA_STORE: system
     steps:
       - uses: actions/checkout@v5
-      - uses: denoland/setup-deno@v1
+      - name: Setup Deno runtime
+        id: setup-deno
+        uses: ./.github/actions/setup-runtimes
         with:
+          enable-deno: "true"
           deno-version: v1.x
-      - name: Cache Deno dependencies
-        id: deno-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/deno
-            ~/.deno
-          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock', 'deno.json') }}
-          restore-keys: |
-            ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}-
-            ${{ runner.os }}-deno-
+          deno-cache-key: ${{ format('{0}-deno-{1}', runner.os, hashFiles('deno.lock', 'deno.json')) }}
+          deno-cache-restore-keys: |
+            ${{ format('{0}-deno-{1}-', runner.os, hashFiles('deno.lock')) }}
+            ${{ format('{0}-deno-', runner.os) }}
       - name: Report Deno cache status
         if: ${{ always() }}
-        id: deno-cache-telemetry
         env:
-          CACHE_HIT: ${{ steps.deno-cache.outputs.cache-hit }}
+          CACHE_HIT: ${{ steps.setup-deno.outputs.deno-cache-hit }}
         run: |
           cache_hit="${CACHE_HIT:-false}"
           echo "Deno cache hit: ${cache_hit}"
-          echo "cache_hit=${cache_hit}" >> "$GITHUB_OUTPUT"
           summary_file="${GITHUB_STEP_SUMMARY:-}"
           if [ -n "${summary_file}" ]; then
             {
