Fix CI logs to respect command failures

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,19 +64,27 @@ jobs:
 
       - name: Build
         if: steps.script-flags.outputs.build != 'undefined'
-        run: npm run build 2>&1 | tee build.log
+        run: |
+          set -euo pipefail
+          npm run build 2>&1 | tee build.log
 
       - name: Typecheck
         if: steps.script-flags.outputs.typecheck != 'undefined'
-        run: npm run typecheck 2>&1 | tee typecheck.log
+        run: |
+          set -euo pipefail
+          npm run typecheck 2>&1 | tee typecheck.log
 
       - name: Lint
         if: steps.script-flags.outputs.lint != 'undefined'
-        run: npm run lint 2>&1 | tee lint.log
+        run: |
+          set -euo pipefail
+          npm run lint 2>&1 | tee lint.log
 
       - name: Test
         if: steps.script-flags.outputs.test != 'undefined'
-        run: npm run test 2>&1 | tee test.log
+        run: |
+          set -euo pipefail
+          npm run test 2>&1 | tee test.log
 
       - name: Dependency cache summary
         if: ${{ always() }}
