--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "private": true,
   "type": "module",
+  "packageManager": "npm@11.4.2",
   "scripts": {
     "dev": "next dev",
     "build": "node ../../scripts/run-next-build.mjs",
