--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,85 +21,64 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DENO_TLS_CA_STORE: system
-      NPM_CONFIG_AUDIT: "false"
-      NPM_CONFIG_FUND: "false"
-      NPM_CONFIG_PROGRESS: "false"
-      NPM_CONFIG_UPDATE_NOTIFIER: "false"
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Setup Node runtime
-        id: setup-node
+      - id: script-flags
+        name: Detect npm scripts
+        run: |
+          set -euo pipefail
+          for script in build typecheck lint test; do
+            if jq -e --arg name "$script" '.scripts[$name]' package.json >/dev/null; then
+              echo "${script}=true" >> "$GITHUB_OUTPUT"
+            else
+              echo "${script}=false" >> "$GITHUB_OUTPUT"
+            fi
+          done
+
+      - name: Setup runtimes
+        id: setup-runtimes
         uses: ./.github/actions/setup-runtimes
         with:
-          enable-node: "true"
+          enable-node: true
           node-version: "20"
           node-cache: npm
           node-cache-dependency-path: |
             package-lock.json
             naming-engine/package-lock.json
+          enable-deno: ${{ steps.script-flags.outputs.test == 'true' }}
+          deno-version: v1.x
+          deno-cache-key: ${{ steps.script-flags.outputs.test == 'true' && format('{0}-deno-{1}', runner.os, hashFiles('deno.lock')) || '' }}
+          deno-cache-restore-keys: ${{ steps.script-flags.outputs.test == 'true' && format('{0}-deno-', runner.os) || '' }}
+          write-summary: true
 
       - name: Install dependencies
         run: npm ci --no-audit --prefer-offline
 
-      - id: script-flags
-        name: Detect npm scripts
-        run: |
-          echo "build=$(npm pkg get scripts.build | tr -d '"')" >> "$GITHUB_OUTPUT"
-          echo "typecheck=$(npm pkg get scripts.typecheck | tr -d '"')" >> "$GITHUB_OUTPUT"
-          echo "lint=$(npm pkg get scripts.lint | tr -d '"')" >> "$GITHUB_OUTPUT"
-          echo "test=$(npm pkg get scripts.test | tr -d '"')" >> "$GITHUB_OUTPUT"
-
-      - name: Setup Deno runtime
-        if: steps.script-flags.outputs.test != 'undefined'
-        id: setup-deno
-        uses: ./.github/actions/setup-runtimes
-        with:
-          enable-deno: "true"
-          deno-version: v1.x
-          deno-cache-key: ${{ format('{0}-deno-{1}', runner.os, hashFiles('deno.lock')) }}
-          deno-cache-restore-keys: |
-            ${{ format('{0}-deno-', runner.os) }}
-
       - name: Build
-        if: steps.script-flags.outputs.build != 'undefined'
+        if: steps.script-flags.outputs.build == 'true'
         run: |
           set -euo pipefail
           npm run build 2>&1 | tee build.log
 
       - name: Typecheck
-        if: steps.script-flags.outputs.typecheck != 'undefined'
+        if: steps.script-flags.outputs.typecheck == 'true'
         run: |
           set -euo pipefail
           npm run typecheck 2>&1 | tee typecheck.log
 
       - name: Lint
-        if: steps.script-flags.outputs.lint != 'undefined'
+        if: steps.script-flags.outputs.lint == 'true'
         run: |
           set -euo pipefail
           npm run lint 2>&1 | tee lint.log
 
       - name: Test
-        if: steps.script-flags.outputs.test != 'undefined'
+        if: steps.script-flags.outputs.test == 'true'
         run: |
           set -euo pipefail
           npm run test 2>&1 | tee test.log
-
-      - name: Dependency cache summary
-        if: ${{ always() }}
-        env:
-          NODE_CACHE_HIT: ${{ steps.setup-node.outputs.node-cache-hit }}
-          DENO_CACHE_HIT: ${{ steps.setup-deno.outputs.deno-cache-hit }}
-        run: |
-          summary_file="${GITHUB_STEP_SUMMARY:-}"
-          if [ -n "${summary_file}" ]; then
-            {
-              echo "### Dependency cache status";
-              echo "- Node cache hit: \`${NODE_CACHE_HIT:-false}\`";
-              echo "- Deno cache hit: \`${DENO_CACHE_HIT:-n/a}\`";
-            } >> "${summary_file}"
-          fi
 
       - name: Upload CI diagnostics
         if: failure()
@@ -121,31 +100,18 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup Python runtime
-        id: setup-python
         uses: ./.github/actions/setup-runtimes
         with:
           enable-python: "true"
           python-version: "3.11"
           python-cache: pip
           python-cache-dependency-path: tests_python/requirements.txt
+          write-summary: "true"
 
       - name: Install Python test requirements
         run: |
           python -m pip install --upgrade pip
           pip install -r tests_python/requirements.txt
-
-      - name: Python dependency cache summary
-        if: ${{ always() }}
-        env:
-          PIP_CACHE_HIT: ${{ steps.setup-python.outputs.python-cache-hit }}
-        run: |
-          summary_file="${GITHUB_STEP_SUMMARY:-}"
-          if [ -n "${summary_file}" ]; then
-            {
-              echo "### Python cache status";
-              echo "- Pip cache hit: \`${PIP_CACHE_HIT:-false}\`";
-            } >> "${summary_file}"
-          fi
 
       - name: Run GPT regression suite
         run: pytest tests_python/test_dynamic_gpt_model.py
