--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -30,12 +30,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup runtimes
+        uses: ./.github/actions/setup-runtimes
         with:
+          enable-node: "true"
           node-version: "20"
-          cache: npm
-          cache-dependency-path: tools/eslint-runner/package-lock.json
+          node-cache: npm
+          node-cache-dependency-path: tools/eslint-runner/package-lock.json
 
       - name: Install ESLint dependencies
         working-directory: tools/eslint-runner
