--- a/.github/workflows/ton-health.yml
+++ b/.github/workflows/ton-health.yml
@@ -22,9 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-node@v4
+      - name: Setup runtimes
+        uses: ./.github/actions/setup-runtimes
         with:
-          node-version: 20
+          enable-node: "true"
+          node-version: "20"
+          node-cache: npm
       - name: TON site resolver check
         run: node scripts/verify/ton_site.mjs
       - name: TON storage manifest check
