--- a/.github/workflows/ton-verifier-build.yml
+++ b/.github/workflows/ton-verifier-build.yml
@@ -40,10 +40,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js 18
-        uses: actions/setup-node@v4
+      - name: Setup runtimes
+        uses: ./.github/actions/setup-runtimes
         with:
-          node-version: 18
+          enable-node: "true"
+          node-version: "18"
+          node-cache: npm
 
       - name: Build TON Contract Verifier
         run: |
