--- a/.github/workflows/variants.yml
+++ b/.github/workflows/variants.yml
@@ -20,11 +20,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Use Node.js 20
-        uses: actions/setup-node@v4
+      - name: Setup runtimes
+        uses: ./.github/actions/setup-runtimes
         with:
+          enable-node: "true"
           node-version: "20"
-          cache: "npm"
+          node-cache: npm
 
       - name: Install dependencies
         run: npm ci
