--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "audit": "npm audit",
     "audit:metadata": "node scripts/audit/index.mjs",
     "audit:hardcodes": "tsx scripts/security/audit-hardcodes.ts",
+    "audit:hardcodes:auto": "tsx scripts/security/audit-hardcodes.ts --auto",
+    "audit:hardcodes:strict": "tsx scripts/security/audit-hardcodes.ts --strict",
     "audit:fix": "npm audit fix",
     "sync-env": "deno run -A scripts/sync-env.ts",
     "env:validate": "tsx scripts/env/validate.ts",
