--- a/package.json
+++ b/package.json
@@ -152,13 +152,14 @@
     "undici": "^6.22.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.28.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@ton-community/func-js": "^0.10.0",
-    "func-js-bin-0.4.3": "npm:@ton-community/func-js-bin@^0.4.3",
     "chokidar-cli": "^3.0.0",
     "deno": "^2.5.0",
     "dotenv": "^16.4.5",
     "firecrawl": "^1.21.1",
+    "func-js-bin-0.4.3": "npm:@ton-community/func-js-bin@^0.4.3",
     "globals": "^16.4.0",
     "ngrok": "^5.0.0-beta.2",
     "pg-mem": "^3.0.5",
