Add Orbs mainnet verification script and report

--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "ton:site-status": "tsx tools/ton/check-site-status.ts",
     "ton:mainnet-status": "tsx tools/ton/check-mainnet-status.ts",
     "ton:build-site-predeploy": "tsx tools/ton/build-site-predeploy.ts",
-    "ton:build-verifier": "$(bash scripts/deno_bin.sh) run -A dynamic-capital-ton/apps/tools/build-ton-verifier.ts"
+    "ton:build-verifier": "$(bash scripts/deno_bin.sh) run -A dynamic-capital-ton/apps/tools/build-ton-verifier.ts",
+    "orbs:verify-mainnet": "tsx scripts/orbs/run-mainnet-verification.ts"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
