--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "upload-assets": "node scripts/upload-assets.js",
     "upload-assets:watch": "chokidar '_static/**/*' -c 'npm run upload-assets'",
     "docs:export": "tsx scripts/docs/export.ts",
+    "docs:export:issuer": "tsx scripts/docs/export-issuer-statement.ts",
     "docs:summary": "deno run -A scripts/generate-repo-summary.ts",
     "docs:toc": "tsx scripts/docs/update-toc.ts README.md docs/dynamic-capital-playbook.md docs/dynamic-capital-wisdom-playbook.md docs/api-documentation.md",
     "docs:organize": "$(bash scripts/deno_bin.sh) run -A scripts/repo-file-organizer.ts",
