Add installer for DigitalOcean CLI

--- a/.do/app.yml
+++ b/.do/app.yml
@@ -7,14 +7,14 @@ spec:
     - rule: DEPLOYMENT_FAILED
     - rule: DOMAIN_FAILED
   domains:
-    - domain: dynamic-capital.ondigitalocean.app
+    - domain: dynamic-capital-qazf2.ondigitalocean.app
       type: PRIMARY
       wildcard: false
-      zone: dynamic-capital.ondigitalocean.app
-    - domain: dynamic-capital-qazf2.ondigitalocean.app
+      zone: ondigitalocean.app
+    - domain: dynamic-capital.ondigitalocean.app
       type: ALIAS
       wildcard: false
-      zone: ondigitalocean.app
+      zone: dynamic-capital.ondigitalocean.app
     - domain: dynamic-capital.vercel.app
       type: ALIAS
       wildcard: false
@@ -47,19 +47,19 @@ spec:
       value: "1"
       scope: RUN_AND_BUILD_TIME
     - key: SITE_URL
-      value: https://dynamic-capital.ondigitalocean.app
+      value: https://dynamic-capital-qazf2.ondigitalocean.app
       scope: RUN_AND_BUILD_TIME
     - key: NEXT_PUBLIC_SITE_URL
-      value: https://dynamic-capital.ondigitalocean.app
+      value: https://dynamic-capital-qazf2.ondigitalocean.app
       scope: RUN_AND_BUILD_TIME
     - key: ALLOWED_ORIGINS
-      value: https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app
+      value: https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app
       scope: RUN_AND_BUILD_TIME
     - key: MINIAPP_ORIGIN
-      value: https://dynamic-capital.ondigitalocean.app
+      value: https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamiccapital.ton,https://t.me
       scope: RUN_AND_BUILD_TIME
     - key: TELEGRAM_WEBHOOK_URL
-      value: https://dynamic-capital.ondigitalocean.app/webhook
+      value: https://dynamic-capital-qazf2.ondigitalocean.app/webhook
       scope: RUN_AND_BUILD_TIME
     - key: NEXT_PUBLIC_SUPABASE_URL
       value: https://qeejuomcapbdlhnjqjcc.supabase.co
@@ -96,19 +96,19 @@ spec:
         http_path: /healthz
       envs:
         - key: SITE_URL
-          value: https://dynamic-capital.ondigitalocean.app
+          value: https://dynamic-capital-qazf2.ondigitalocean.app
           scope: RUN_AND_BUILD_TIME
         - key: NEXT_PUBLIC_SITE_URL
-          value: https://dynamic-capital.ondigitalocean.app
+          value: https://dynamic-capital-qazf2.ondigitalocean.app
           scope: RUN_AND_BUILD_TIME
         - key: ALLOWED_ORIGINS
-          value: https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app
+          value: https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic.capital,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app
           scope: RUN_AND_BUILD_TIME
         - key: MINIAPP_ORIGIN
-          value: https://dynamic-capital.ondigitalocean.app
+          value: https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamiccapital.ton,https://t.me
           scope: RUN_AND_BUILD_TIME
         - key: TELEGRAM_WEBHOOK_URL
-          value: https://dynamic-capital.ondigitalocean.app/webhook
+          value: https://dynamic-capital-qazf2.ondigitalocean.app/webhook
           scope: RUN_AND_BUILD_TIME
   static_sites: []
   workers: []
