Clarify environment variable tiers

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,27 @@
-# Base application context
+# =====================================================================
+# Dynamic Capital Environment Template
+#
+# Keys are grouped by deployment tier to clarify onboarding:
+#   [Core]     Required for any running environment.
+#   [Optional] Enable additional integrations as needed.
+#   [Legacy]   Maintained for backward compatibility with older scripts.
+# =====================================================================
+
+# ------------------------------- [Core] -------------------------------
+# Application runtime
 NODE_ENV=development
 NEXT_PUBLIC_ENV=development
 NEXT_PUBLIC_COMMIT_SHA=
+
+# Domain and routing
+DOMAIN=example.com
+SITE_URL=https://example.com/
+NEXT_PUBLIC_SITE_URL=https://example.com/
+NEXT_PUBLIC_API_URL=https://api.example.com
+ALLOWED_ORIGINS=https://example.com,https://api.example.com
+
+# Commit + health endpoints
+HEALTH_URL=
 
 # API caching
 CACHE_TTL_SECONDS=300
@@ -16,8 +36,6 @@ SUPABASE_PROJECT_ID=
 SUPABASE_DB_PASSWORD=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE=
-# Backwards compatibility alias kept for existing scripts
-SUPABASE_SERVICE_ROLE_KEY=
 SUPABASE_DB_URL=
 SUPABASE_FN_URL=
 SUPABASE_ACCESS_TOKEN=
@@ -26,12 +44,17 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
 # Safe to expose in clients, but keep a placeholder to avoid copying live keys.
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
+# Session & admin secrets
+SESSION_JWT_SECRET=
+ADMIN_API_SECRET=
+
 # Deployment platform access
 DO_APP_ID=
 DO_API_TOKEN=
 VERCEL_TOKEN=
 DIGITALOCEAN_TOKEN=
 
+# ----------------------------- [Optional] -----------------------------
 # Observability and release metadata
 SENTRY_DSN=
 NEXT_PUBLIC_SENTRY_DSN=
@@ -42,18 +65,7 @@ LOGTAIL_URL=
 LOG_LEVEL=
 NODE_EXTRA_CA_CERTS=
 
-# Domains and routing
-DOMAIN=example.com
-SITE_URL=https://example.com/
-NEXT_PUBLIC_SITE_URL=https://example.com/
-NEXT_PUBLIC_API_URL=https://api.example.com
-ALLOWED_ORIGINS=https://example.com,https://api.example.com
-
-# Commit + health endpoints
-HEALTH_URL=
-
-# Telegram bot + mini app
-# Populate these only in secure env vars; never commit live tokens.
+# Telegram bot + mini app (secure these in managed secret stores)
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_APP_ID=
 TELEGRAM_APP_HASH=
@@ -70,8 +82,6 @@ NEXT_PUBLIC_MINI_APP_URL=
 MINI_APP_URL=
 MINI_APP_SHORT_NAME=
 MINIAPP_ORIGIN=
-SESSION_JWT_SECRET=
-ADMIN_API_SECRET=
 
 # Payments
 BINANCE_PAY_API_KEY=
@@ -140,8 +150,6 @@ OPENAI_ENABLED=false
 ANTHROPIC_API_KEY=
 GROQ_API_KEY=
 HUGGINGFACE_ACCESS_TOKEN=
-# Legacy alias also supported for the Hugging Face provider
-HUGGINGFACE_API_KEY=
 # Optional overrides for the default Hugging Face model and endpoint
 HUGGINGFACE_CHAT_MODEL=
 HUGGINGFACE_CHAT_URL=
@@ -200,3 +208,9 @@ GITHUB_DEFAULT_BRANCH=
 GITHUB_ID=
 GH_TOKEN=
 GITHUB_SECRET=
+
+# ------------------------------ [Legacy] ------------------------------
+# Backwards compatibility aliases kept for existing scripts
+SUPABASE_SERVICE_ROLE_KEY=
+# Legacy alias also supported for the Hugging Face provider
+HUGGINGFACE_API_KEY=
